facet-json/tests/snapshots/err__bad_json_4.snap
---
source: facet-json/tests/err.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m json:2:3 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[31m}[0m
 [38;5;240m  │[0m   [31m┬[0m  
 [38;5;240m  │[0m   [31m╰[0m[31m─[0m[31m─[0m Unexpected character: got '[31m}[39m', wanted [33ma value[39m
[38;5;246m───╯[0m
