facet-json/tests/snapshots/err__bad_json_6_string_as_number_subpath.snap
---
source: facet-json/tests/err.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m <unknown>:1:20 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m{[0m[38;5;249m"[0m[38;5;249mf[0m[38;5;249mo[0m[38;5;249mo[0m[38;5;249m"[0m[38;5;249m:[0m[38;5;249m [0m[38;5;249m4[0m[38;5;249m2[0m[38;5;249m,[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249mb[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249m"[0m[38;5;249m:[0m[38;5;249m [0m[31m4[0m[31m2[0m[38;5;249m}[0m
 [38;5;240m  │[0m                    [31m─[0m[31m┬[0m  
 [38;5;240m  │[0m                     [31m╰[0m[31m─[0m[31m─[0m Unsupported type: got [31mString[39m, wanted [32mnumeric type[39m
[38;5;246m───╯[0m
