facet-json/tests/snapshots/err__deserialize_tuple_empty_nested_from_1tup.snap
---
source: facet-json/tests/err.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m json:1:2 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m[[0m[31m1[0m[31m0[0m[38;5;249m][0m
 [38;5;240m  │[0m  [31m─[0m[31m┬[0m  
 [38;5;240m  │[0m   [31m╰[0m[31m─[0m[31m─[0m Unsupported type: got [31m()[39m, wanted [32mnumeric type[39m
[38;5;246m───╯[0m
